--- a/app/src/main/res/layout/floating_caller_info.xml
+++ b/app/src/main/res/layout/floating_caller_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <zorro.dimyon.calleridentity.helpers.SwipeDismissLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/background_transparent_radius"
     tools:ignore="HardcodedText"
@@ -39,7 +39,7 @@
 
         <TextView
             android:id="@+id/callerNameTV"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nur Alam"
             android:textColor="@color/white"
