--- a/app/src/main/res/drawable/background_floating_caller_info.xml
+++ b/app/src/main/res/drawable/background_floating_caller_info.xml
@@ -5,7 +5,7 @@
         android:radius="50dp" />
 
     <solid
-        android:color="#90000000" />
+        android:color="#000000" />
     <stroke
         android:width="0dp"
         android:color="#90000000" />
