--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,16 @@
             android:layout_marginTop="15dp"
             tools:ignore="HardcodedText,VisualLintButtonSize" />
 
+        <Button
+            android:id="@+id/alreadyHasOTP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="50dp"
+            android:layout_marginHorizontal="16dp"
+            android:text="Already have OTP?"
+            android:layout_marginTop="15dp"
+            tools:ignore="HardcodedText,VisualLintButtonSize" />
+
     </LinearLayout>
 
     <LinearLayout
