--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,7 +59,7 @@
             tools:ignore="HardcodedText,VisualLintButtonSize" />
 
         <Button
-            android:id="@+id/alreadyHasOTP"
+            android:id="@+id/alreadyHaveOTPBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="50dp"
