--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,34 +1,50 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="@string/messages_header">
+    <PreferenceCategory app:title="@string/spam_calls_header">
 
-        <EditTextPreference
-            app:key="signature"
-            app:title="@string/signature_title"
-            app:useSimpleSummaryProvider="true" />
+        <SwitchPreferenceCompat
+            app:key="block_all_spammers"
+            app:summaryOff="@string/block_all_spammers_summary_off"
+            app:summaryOn="@string/block_all_spammers_summary_on"
+            app:title="@string/block_all_spammers_title" />
 
-        <ListPreference
-            app:defaultValue="reply"
-            app:entries="@array/reply_entries"
-            app:entryValues="@array/reply_values"
-            app:key="reply"
-            app:title="@string/reply_title"
-            app:useSimpleSummaryProvider="true" />
+        <SwitchPreferenceCompat
+            app:key="block_top_spammers"
+            app:summaryOn="@string/block_top_spammers_summary_on"
+            app:summaryOff="@string/block_top_spammers_summary_off"
+            app:title="@string/block_top_spammers_title" />
 
     </PreferenceCategory>
 
-    <PreferenceCategory app:title="@string/sync_header">
+    <PreferenceCategory app:title="@string/floating_window_header">
 
         <SwitchPreferenceCompat
-            app:key="sync"
-            app:title="@string/sync_title" />
+            app:key="floating_window_incoming"
+            app:summaryOn="@string/floating_window_incoming_summary_on"
+            app:summaryOff="@string/floating_window_incoming_summary_off"
+            app:title="@string/floating_window_incoming_title" />
 
         <SwitchPreferenceCompat
-            app:dependency="sync"
-            app:key="attachment"
-            app:summaryOff="@string/attachment_summary_off"
-            app:summaryOn="@string/attachment_summary_on"
-            app:title="@string/attachment_title" />
+            app:key="floating_window_outgoing"
+            app:summaryOn="@string/floating_window_outgoing_summary_on"
+            app:summaryOff="@string/floating_window_outgoing_summary_off"
+            app:title="@string/floating_window_outgoing_title" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory app:title="@string/incoming_calls_header">
+
+        <SwitchPreferenceCompat
+            app:key="reject_all_incoming_calls"
+            app:summaryOn="@string/reject_all_incoming_calls_summary_on"
+            app:summaryOff="@string/reject_all_incoming_calls_summary_off"
+            app:title="@string/reject_all_incoming_calls_title" />
+
+        <SwitchPreferenceCompat
+            app:key="reject_unknown_incoming_calls"
+            app:summaryOn="@string/reject_unknown_incoming_calls_summary_on"
+            app:summaryOff="@string/reject_unknown_incoming_calls_summary_off"
+            app:title="@string/reject_unknown_incoming_calls_title" />
 
     </PreferenceCategory>
 
