--- a/app/src/main/res/layout/floating_caller_info.xml
+++ b/app/src/main/res/layout/floating_caller_info.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/background_floating_caller_info"
     tools:ignore="HardcodedText"
+    android:id="@+id/floatingCallerInfoMainLayout"
     android:padding="15dp">
 
     <FrameLayout
