--- a/app/src/main/res/drawable/background_danger_floating_caller_info.xml
+++ b/app/src/main/res/drawable/background_danger_floating_caller_info.xml
@@ -5,9 +5,9 @@
         android:radius="50dp" />
 
     <solid
-        android:color="#000000" />
+        android:color="#FF0000" />
     <stroke
-        android:width="0dp"
-        android:color="#90000000" />
+        android:width="1dp"
+        android:color="#FFFFFF" />
 
 </shape>
