--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red_white">#FFE6E4</color>
     <color name="red">#FF0000</color>
+    <color name="theme_color_dark">#673AB7</color>
 </resources>
