--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:text="Login with OTP"
         android:layout_centerInParent="true"
         android:visibility="visible"
+        android:textColor="@color/white"
         tools:ignore="HardcodedText" />
 
 </RelativeLayout>
