--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -30,7 +30,7 @@
             tools:ignore="HardcodedText,TouchTargetSizeCheck" />
 
         <EditText
-            android:id="@+id/inputNumber"
+            android:id="@+id/inputPhoneNumberET"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_toEndOf="@id/backBtn"
