--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,83 @@
         android:layout_height="wrap_content"
         android:text="Login with OTP"
         android:layout_centerInParent="true"
-        android:visibility="visible"
+        android:visibility="gone"
         android:textColor="@color/white"
         tools:ignore="HardcodedText" />
+
+    <LinearLayout
+        android:id="@+id/callLogsViewContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        android:orientation="vertical"
+        android:layout_below="@+id/toolbar_include">
+
+        <LinearLayout
+            android:id="@+id/todayLogsContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/today_call_logs_header"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:textColor="?attr/colorAccent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/todayLogsRV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/yesterdayLogsContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/yesterday_call_logs_header"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:textColor="?attr/colorAccent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/yesterdayLogsRV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/olderLogsContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/older_call_logs_header"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:textColor="?attr/colorAccent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/olderLogsRV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
