--- a/app/src/main/res/layout/sample_calllog_view.xml
+++ b/app/src/main/res/layout/sample_calllog_view.xml
@@ -1,6 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:padding="5dp"
+    tools:ignore="HardcodedText">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/contactProfileIV"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:contentDescription="Profile DP"
+            android:src="@drawable/person_24"
+            android:background="@color/theme_color_light"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            app:shapeAppearanceOverlay="@style/CircleImageViewStyle"
+            android:adjustViewBounds="true" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
+            android:layout_toEndOf="@+id/contactProfileIV">
+
+            <TextView
+                android:id="@+id/contactNameTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/TextAppearance.AppCompat.Medium"
+                android:text="Benojir Sultana"
+                android:textStyle="bold"
+                android:textColor="?attr/textColor" />
+
+            <TextView
+                android:id="@+id/callLogTypeAndTimeTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="8:50 PM"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_marginTop="3dp"
+                app:drawableLeftCompat="@drawable/call_missed_24"
+                android:drawablePadding="5dp"
+                android:textColor="?attr/textColor" />
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/callBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/phone_24"
+            android:padding="10dp"
+            android:background="@drawable/round_transparent_ripple_button"
+            app:tint="?attr/textColor"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="5dp"
+            android:contentDescription="Call" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/hiddenViewsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="10dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</LinearLayout>
