--- a/app/src/main/res/layout/sample_calllog_view.xml
+++ b/app/src/main/res/layout/sample_calllog_view.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="5dp"
+    android:paddingHorizontal="5dp"
+    android:paddingVertical="10dp"
+    android:layout_marginBottom="5dp"
     tools:ignore="HardcodedText">
 
     <RelativeLayout
