--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="10dp"
     tools:context=".activities.LoginActivity">
 
     <include
@@ -18,6 +17,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:visibility="visible"
+        android:layout_marginHorizontal="10dp"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -70,6 +70,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:visibility="gone"
+        android:layout_marginHorizontal="10dp"
         android:orientation="vertical">
 
         <EditText
