--- a/app/src/main/res/layout/sample_calllog_view.xml
+++ b/app/src/main/res/layout/sample_calllog_view.xml
@@ -8,6 +8,10 @@
     android:paddingHorizontal="5dp"
     android:paddingVertical="10dp"
     android:layout_marginBottom="5dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:id="@+id/contactNameAndCallLogContainer"
     tools:ignore="HardcodedText">
 
     <RelativeLayout
@@ -27,7 +31,6 @@
             android:adjustViewBounds="true" />
 
         <LinearLayout
-            android:id="@+id/contactNameAndCallLogContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -35,6 +38,8 @@
             android:layout_centerVertical="true"
             android:gravity="center_vertical"
             android:layout_toEndOf="@+id/contactProfileIV"
+            android:clickable="false"
+            android:focusable="false"
             android:layout_toStartOf="@+id/callBtn">
 
             <TextView
