--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,12 +27,13 @@
         android:id="@+id/callLogsViewContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="10dp"
         android:layout_below="@+id/toolbar_include">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -47,6 +48,7 @@
                     android:text="@string/today_call_logs_header"
                     style="@style/TextAppearance.AppCompat.Body2"
                     android:padding="10dp"
+                    android:layout_marginHorizontal="10dp"
                     android:textColor="?attr/colorAccent" />
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -70,6 +72,7 @@
                     android:text="@string/yesterday_call_logs_header"
                     style="@style/TextAppearance.AppCompat.Body2"
                     android:padding="10dp"
+                    android:layout_marginHorizontal="10dp"
                     android:textColor="?attr/colorAccent" />
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -93,6 +96,7 @@
                     android:text="@string/older_call_logs_header"
                     style="@style/TextAppearance.AppCompat.Body2"
                     android:padding="10dp"
+                    android:layout_marginHorizontal="10dp"
                     android:textColor="?attr/colorAccent" />
 
                 <androidx.recyclerview.widget.RecyclerView
