--- a/app/src/main/res/layout/sample_calllog_view.xml
+++ b/app/src/main/res/layout/sample_calllog_view.xml
@@ -12,6 +12,7 @@
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:id="@+id/contactNameAndCallLogContainer"
+    android:padding="10dp"
     tools:ignore="HardcodedText">
 
     <RelativeLayout
